[gd_scene load_steps=7 format=3 uid="uid://desbdtn8q6c6b"]

[ext_resource type="Script" path="res://code/SwitchCard.gd" id="1_qrp57"]
[ext_resource type="StyleBox" uid="uid://dtprptd3pajuc" path="res://assets/style/textbox/normal.tres" id="2_c2rej"]
[ext_resource type="StyleBox" uid="uid://cw0soia3heuwr" path="res://assets/style/textbox/focus.tres" id="3_3j533"]
[ext_resource type="StyleBox" uid="uid://n4nww25bt7nl" path="res://assets/style/button/hover.tres" id="4_i8i7u"]
[ext_resource type="StyleBox" uid="uid://k3xf7teubqco" path="res://assets/style/button/press.tres" id="5_m46ub"]
[ext_resource type="StyleBox" uid="uid://b8rjj6b3sty0v" path="res://assets/style/button/normal.tres" id="6_w5a0t"]

[node name="ConditionPropertyCard" type="MarginContainer"]
custom_minimum_size = Vector2(230, 0)
offset_right = 230.0
offset_bottom = 43.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_qrp57")

[node name="HboxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="HboxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("2_c2rej")
theme_override_styles/focus = ExtResource("3_3j533")
placeholder_text = "switch name
"
scroll_smooth = true
scroll_fit_content_height = true
caret_blink = true

[node name="CheckBox" type="CheckButton" parent="HboxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
button_mask = 3
text = "One shot"
alignment = 1
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="HboxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
theme_override_styles/hover = ExtResource("4_i8i7u")
theme_override_styles/pressed = ExtResource("5_m46ub")
theme_override_styles/normal = ExtResource("6_w5a0t")
text = "Ã—"

[connection signal="text_changed" from="HboxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="toggled" from="HboxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HboxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
